; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/http/extr_hpack.c_hpack_decode_init.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/http/extr_hpack.c_hpack_decode_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hpack_decoder = type { i64, i64, i64, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.hpack_decoder* @hpack_decode_init(i64 %0) #0 {
  %2 = alloca %struct.hpack_decoder*, align 8
  %3 = alloca i64, align 8
  %4 = alloca %struct.hpack_decoder*, align 8
  store i64 %0, i64* %3, align 8
  %5 = call %struct.hpack_decoder* @malloc(i32 32)
  store %struct.hpack_decoder* %5, %struct.hpack_decoder** %4, align 8
  %6 = load %struct.hpack_decoder*, %struct.hpack_decoder** %4, align 8
  %7 = icmp eq %struct.hpack_decoder* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store %struct.hpack_decoder* null, %struct.hpack_decoder** %2, align 8
  br label %20

9:                                                ; preds = %1
  %10 = load %struct.hpack_decoder*, %struct.hpack_decoder** %4, align 8
  %11 = getelementptr inbounds %struct.hpack_decoder, %struct.hpack_decoder* %10, i32 0, i32 3
  store i32* null, i32** %11, align 8
  %12 = load %struct.hpack_decoder*, %struct.hpack_decoder** %4, align 8
  %13 = getelementptr inbounds %struct.hpack_decoder, %struct.hpack_decoder* %12, i32 0, i32 2
  store i64 0, i64* %13, align 8
  %14 = load %struct.hpack_decoder*, %struct.hpack_decoder** %4, align 8
  %15 = getelementptr inbounds %struct.hpack_decoder, %struct.hpack_decoder* %14, i32 0, i32 1
  store i64 0, i64* %15, align 8
  %16 = load i64, i64* %3, align 8
  %17 = load %struct.hpack_decoder*, %struct.hpack_decoder** %4, align 8
  %18 = getelementptr inbounds %struct.hpack_decoder, %struct.hpack_decoder* %17, i32 0, i32 0
  store i64 %16, i64* %18, align 8
  %19 = load %struct.hpack_decoder*, %struct.hpack_decoder** %4, align 8
  store %struct.hpack_decoder* %19, %struct.hpack_decoder** %2, align 8
  br label %20

20:                                               ; preds = %9, %8
  %21 = load %struct.hpack_decoder*, %struct.hpack_decoder** %2, align 8
  ret %struct.hpack_decoder* %21
}

declare dso_local %struct.hpack_decoder* @malloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
